@@ -5,6 +5,7 @@ include ../../build/rules.make
 LINKER = ../linker/monolinker.exe
 
 TUNER_SOURCES = \
+	Mono.Tuner/TunerAnnotations.cs	\
 	Mono.Tuner/PrintStatus.cs	\
 	Mono.Tuner/RemoveSerialization.cs	\
 	Mono.Tuner/AdjustVisibility.cs	\
@@ -29,7 +30,8 @@ WORKING_DIR = $(topdir)/class/lib/net_2_1
 OUTPUT_DIR = $(topdir)/class/lib/net_2_1_tuned
 
 ifneq (net_2_1, $(PROFILE))
-all-local: Mono.Tuner.dll
+all-local:
+	$(CSCOMPILE) /out:Mono.Tuner.dll /t:library $(TUNER_SOURCES)
 
 install-local:
 
@@ -81,5 +83,3 @@ inst-%:
 gac-%:
 	$(GACUTIL) /i $(OUTPUT_DIR)/$*.dll /f /root $(DESTDIR)$(mono_libdir) /package 2.1
 
-Mono.Tuner.dll:
-	$(CSCOMPILE) /out:Mono.Tuner.dll /t:library $(TUNER_SOURCES)
